@@ -121,7 +121,7 @@ if (false !== $possibly_uploaded_val) {
     // (if there is a value, we ignore the Null checkbox: this could
     // be possible if Javascript is disabled in the browser)
     if (isset($me_fields_null[$key])
-     && $val == "''") {
+     && ($val == "''" || $val == '')) {
         $val = 'NULL';
     }
 
